--- a/app/templates/items/all_items.html
+++ b/app/templates/items/all_items.html
@@ -58,7 +58,7 @@
 <div class="card border-0 shadow-sm rounded-4">
     <div class="table-responsive-lg">
         <table class="table table-hover align-middle mb-0">
-            <thead class="bg-light border-bottom">
+            <thead class="table-secondary border-bottom">
                 <tr>
                     <th scope="col" class="text-center text-muted small fw-bold text-uppercase py-3" style="width: 60px;">序号</th>
                     <th scope="col" class="text-muted small fw-bold text-uppercase py-3">名称</th>
