--- a/app/templates/records/all_records.html
+++ b/app/templates/records/all_records.html
@@ -58,7 +58,7 @@
 {% if records %}
     <div class="table-responsive shadow-sm rounded">
         <table class="table table-hover align-middle mb-0">
-            <thead class="table-light">
+            <thead class="table-secondary border-bottom">
                 <tr>
                     <!-- 修改：标题改为“序号” -->
                     <th scope="col" class="text-center" style="width: 80px;">序号</th>
